# cv

./: .gitignore  Cargo.toml  LICENSE  README.md  info.toml
.github/workflows/: deploy-external.yml
apps/web/components/molecules/: About.tsx  Avatar.tsx  Experience.tsx  Links.tsx  Locations.tsx  Name.tsx  Summary.tsx
apps/web/components/organism/: CV.tsx
apps/web/constants/: CONTRIBUTIONS.ts  EDUCATIONS.ts  EXPERIENCES.tsx  LANGUAGES.ts  LOCATIONS.ts  PROJECTS.ts  SKILLS.ts  index.tsx
src/: data_structs.rs  info_structs.rs  main.rs
static/styles/: globals.css
templates/: _main.html.jinja  about.html.jinja  avatar.html.jinja  company-logo.html.jinja  educations.html.jinja  experiences.html.jinja  hello_world.html  languages.html.jinja  links.html.jinja  location.html.jinja  name.html.jinja  summary.html.jinja  utils.html.jinja
