[package]
name = "cv"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
tokio = { version = "1", features = ["full"] }
minijinja = { version = "2.9.0", features = ["loader", ] }
minijinja-autoreload = "2.9.0"

toml = { version = "0.8.22", features = ["preserve_order"] }
serde = { version = "1", features = ["std", "derive"] }
derive_more = "2.0.1"

log = "0.4.27"
env_logger = "0.11.8"
